# Mobile_robotsystem

./: ..gitignore.swp  .README.md  .README.md.swp  .gitignore  CMakeLists.txt  Doxyfile  README.md  al__to__tl_8h_source.html  annotated.html  application__layer_8h_source.html  audio__input_8h_source.html  classAlToTl-members.html  classAlToTl.html  classAudioInput.html  classDFT-members.html  classDFT.html  classDataLinkLayer-members.html  classDataLinkLayer.html  classDllToPl.html  classFFT.html  classGoertzel-members.html  classGoertzel.html  classHelloWorld-members.html  classHelloWorld.html  classHelloWorld_1_1HelloWorldError__coll__graph.map  classPhysicalLayer.html  classSP_1_1Algorithms-members.html  classSP_1_1Algorithms.html  classSharedData-members.html  classSharedData.html  classSharedDataException-members.html  classSharedDataException.html  classSharedDataException__coll__graph.md5  classSignalProcessing-members.html  classTlToDll-members.html  classTlToDll.html  classWaveGenerator-members.html  classWaveGenerator.html  classes.html  crc_8h_source.html  (+45 more)
cpp/: CMakeLists.txt
cpp/include/: al_to_dll.h  application_layer.h  applicationlayer.h  applicationlayer_conversion.h  com_protocol.h  crc.h  data_link_layer.h  hello_world.h  read_shared_data.h  socket_connection.h  transport_layer.h  wave_generator.h
cpp/include/algorithms/: dft.h  fft.h  goertzel.h
cpp/include/audio/: audio_input.h  physical_layer.h  sfml_wave_generator.h  wave_generator.h
cpp/include/communication_protocol/: application_layer.h  crc.h  data_link_layer.h  physical_layer.h  timer.h  transport_layer.h
cpp/include/interfaces/: al_to_tl.h  dll_to_pl.h  signal_processing.h  tl_to_dll.h
cpp/include/test/: hello_world.h
cpp/src/: al_to_dll.cpp  application_layer.cpp  applicationlayer.cpp  applicationlayer_conversion.cpp  com_protocol.cpp  crc.cpp  data_link_layer.cpp  hello_world.cpp  main.cpp  main_gui_code.cpp  pc_main.cpp  read_shared_data.cpp  robot_main.cpp  ros_test_ide.cpp  signal_processing.cpp  socket_connection.cpp  transport_layer.cpp  wave_generator.cpp
cpp/src/algorithms/: algorithms.tpp  dft.cpp  fft.cpp  goertzel.cpp
cpp/src/audio/: audio_input.cpp  physical_layer.cpp  sfml_wave_generator.cpp  wave_generator.cpp
cpp/src/communication_protocol/: application_layer.cpp  crc.cpp  data_link_layer.cpp  physical_layer.cpp  timer.cpp  transport_layer.cpp
cpp/src/interfaces/: al_to_tl.cpp  dll_to_pl.cpp  signal_processing.cpp  tl_to_dll.cpp
cpp/src/test/: main_gui_code.cpp
robot_code/cpp/: CMakeLists.txt  CMakeLists.txt.user.ebf4e77  CMakeLists.txt.user.f930c31
robot_code/cpp/dtmf_sounds/: PI_FIRST_TONE.txt  Signal_For_FFT_Test.txt  output.txt
robot_code/cpp/dtmf_sounds/Signals_for_Size_test/: buffer_400.txt  output_10000.txt  output_16200.txt  output_2000.txt  output_22000.txt  output_400.txt  output_4000.txt  output_500.txt
robot_code/cpp/include/: algorithms.h  audio_input.h  dft.h  fft.h  fft_test.h  goertzel.h  signal_processing.h
robot_code/cpp/install/: local_setup.sh  setup.sh
robot_code/cpp/install/package_1/share/package_1/: local_setup.sh  package.sh  package.xml
robot_code/cpp/log/: latest_build
robot_code/cpp/ros2_ws/: commands.txt
robot_code/cpp/ros2_ws/cc_internals/aarch64-ubuntu-humble/: install_rosdeps.sh
robot_code/cpp/ros2_ws/cc_internals/metrics/: 1730638301.json  1730638618.json  1730638623.json  1730638742.json  1730638873.json  1730639156.json  1730639208.json  1730639293.json  1730639302.json  1730639363.json  1730639556.json
robot_code/cpp/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_code/cpp/ros2_ws/install/turtlebot3_control/lib/turtlebot3_control/: move_turtlebot
robot_code/cpp/ros2_ws/install/turtlebot3_control/share/ament_index/resource_index/package_run_dependencies/: turtlebot3_control
robot_code/cpp/ros2_ws/install/turtlebot3_control/share/turtlebot3_control/: local_setup.sh  package.bash  package.ps1  package.sh
robot_code/cpp/ros2_ws/log/: latest_build  latest_list
robot_code/cpp/ros2_ws/src/cpp_pubsub/: package.xml
robot_code/cpp/ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp
robot_code/cpp/ros2_ws/src/cpp_pubsub/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
robot_code/cpp/ros2_ws/src/cpp_pubsub/src/log/: latest_build
robot_code/cpp/ros2_ws/src/cpp_srvcli/: package.xml
robot_code/cpp/ros2_ws/src/turtlebot3_control/: CMakeLists.txt  CMakeLists.txt.save
robot_code/cpp/ros2_ws/src/turtlebot3_control/include/: audio_input.h
robot_code/cpp/ros2_ws/src/turtlebot3_control/src/: audio_input.cpp  goertzel.cpp  main.cpp  move_turtlebot.cpp
robot_code/cpp/ros2_ws/src/turtlebot3_control/src/install/: setup.bash
robot_code/cpp/ros2_ws_gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_code/cpp/ros2_ws_gazebo/install/gazebo_msgs/share/gazebo_msgs/: package.dsv  package.ps1  package.sh
robot_code/cpp/ros2_ws_gazebo/install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
robot_code/cpp/ros2_ws_gazebo/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: package.sh
robot_code/cpp/ros2_ws_gazebo/install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
robot_code/cpp/ros2_ws_gazebo/install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.sh  package.sh
robot_code/cpp/ros2_ws_gazebo/log/: latest_build
robot_code/cpp/ros2_ws_gazebo/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_code/cpp/ros2_ws_gazebo/src/log/: latest_build
robot_code/cpp/src/: CMakeCache.txt  Makefile  algorithms.tpp  audio_input.cpp  cmake_install.cmake  dft.cpp  fft.cpp  fft_test.cpp  goertzel.cpp  main.cpp  robot_code  test_main.cpp
robot_code/cpp/src/package_1/: CMakeLists.txt
ros2_ws/src/turtlebot3_control/: CMakeLists.txt
ros2_ws/src/turtlebot3_control/src/: fake_wave_generator.cpp  main.cpp  move_turtlebot.cpp
ros2_ws/src/turtlebot3_control/src/install/: local_setup.sh  setup.ps1  setup.sh
ros2_ws/src/turtlebot3_control/srv/: GetYaw.srv
(+247 files in other folders)
